# Snake-Flask

./: .gitignore  README.md  TODO.md  flask-import  flask-tree  pyproject.toml
src/snake_flask/: __init__.py  cli.py
src/snake_flask/access/: __init__.py  authentication_manager.py  db.py  extension.py  mfa.py  pin.py  schema.sql  user.py
src/snake_flask/access/blueprints/: admin.py  authentication.py  mfa.py  pin.py
src/snake_flask/access/dictionaries/: english.py  french.py
src/snake_flask/access/templates/snake_access/: base_extension.html  base_standalone.html  confirm_password.html  login.html  mfa_setup.html  mfa_verify.html  my-account.html  password_confirm.html  pin_confirm.html  pin_setup.html  pin_verify.html  sign-up.html  user-account.html  users.html  verify_mfa.html  verify_pin.html
src/snake_flask/common/: __init__.py  blueprint.py  extension.py  http_errors.py
src/snake_flask/common/blueprints/: config.py
src/snake_flask/common/dictionaries/: english.py  french.py
src/snake_flask/common/static/: snake-common.css  snake-common.js
src/snake_flask/common/static/js/: inactivity.js  password_visibility.js
src/snake_flask/common/templates/snake_common/: app-configuration.html  base_extension.html  base_standalone.html  http_errors.html
src/snake_flask/database/: __init__.py  backends.py  cli.py  database.py  extension.py  migrations.py
src/snake_flask/example/: run.py  seed_users.py  todo.md
src/snake_flask/example/app/: __init__.py  db.py  login_manager.py
src/snake_flask/example/app/_models/: _user.py
src/snake_flask/example/app/_tables/: _admin.py
src/snake_flask/example/app/blueprints/: _admin.py  admin.py  auth.py  list.py
src/snake_flask/example/app/dictionaries/: english.py  french.py
src/snake_flask/example/app/linguae/: english.py  french.py
src/snake_flask/example/app/models/: user.py
src/snake_flask/example/app/tables/: admin.py
src/snake_flask/example/app/templates/: base.html  flash.html  index.html  navbar.html
src/snake_flask/example/app/templates/_admin/: user-account.html  users.html
src/snake_flask/example/app/templates/_auth/: login.html
src/snake_flask/example/app/templates/admin/: user-account.html  users.html
src/snake_flask/example/app/templates/auth/: login.html  my-account.html  sign-up.html
src/snake_flask/example/app/templates/lists/: _bk_card.html  list.html
src/snake_flask/linguae/: README.md  __init__.py  extension.py
src/snake_flask/linguae/dictionaries/: english.py  french.py
src/snake_flask/lists/: __init__.py  extension.py  list.py
src/snake_flask/lists/static/: snake-lists.js
src/snake_flask/lists/templates/snake_lists/: _body.html  list.html
src/snake_flask/permissions/: README.md  __init__.py  db.py  decorators.py  extension.py  permission_sets.py  permissions.py  roles.py  schema.sql
src/snake_flask/permissions/blueprints/: blueprint.py  permission_sets.py  permissions.py  roles.py  users.py
src/snake_flask/permissions/dictionaries/: english.py  french.py
src/snake_flask/permissions/templates/snake_permissions/: base.html  base_extension.html  permission_sets.html  permissions.html  roles.html  user.html
src/snake_flask/quiz/: README.md  __init__.py  blueprints.py  extension.py  quiz_parser.py
src/snake_flask/quiz/dictionaries/: english.py  french.py
src/snake_flask/quiz/quizzes/: flask.md
src/snake_flask/quiz/templates/snake_quiz/: base_extension.html  base_standalone.html  index.html  result.html  take.html
src/snake_flask/tables/: README.md  __init__.py  extension.py  table.py
src/snake_flask/tables/static/: snake-tables.js
src/snake_flask/tables/templates/snake_tables/: table.html
src/snake_flask/utils/: README.md  __init__.py  app_info.py  network.py
