# +-------------------------------------------------------------------- INFO -+
# | [Snake-Flask/pyproject.toml]                                              |
# |                                                                           |
# | Author      : Pascal Malouin (https://github.com/fantomH)                 |
# | Created     : 2026-06-22 10:39:45 UTC                                     |
# | Updated     : 2026-07-03 18:55:55 UTC                                     |
# | Description : Snake-Flask pyproject                                       |
# +---------------------------------------------------------------------------+

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "Snake-Flask"
version = "0.0.1"
description = "Miscellaneous Flask utilities and extensions."
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.10"
license = { text = "MIT" }

authors = [
    { name = "Pascal Malouin", email = "pascal.malouin@gmail.com" }
]

keywords = ["flask", "extensions", "tables", "quiz", "sqlite", "postgresql"]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: Flask",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]

dependencies = [
    "Flask",
    "Markdown",
    "MarkupSafe",
    "rapidfuzz",
    "psycopg",
    "Werkzeug",
    "snake-vault @ git+https://github.com/fantomH/Snake-Vault.git",
    "click",
]

[project.optional-dependencies]

dev = [
    "build",
    "twine",
]

[project.urls]
Homepage = "https://github.com/fantomH/Snake-Flask/"
Repository = "https://github.com/fantomH/Snake-Flask/"
Issues = "https://github.com/fantomH/Snake-Flask/issues"

[tool.setuptools]
zip-safe = false
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"snake_flask.common" = [
    "README.md",
    "static/*",
]

"snake_flask.database" = [
    "README.md",
]

"snake_flask.linguae" = [
    "README.md",
]

"snake_flask.lists" = [
    "templates/**/*.html",
    "static/*",
]

"snake_flask.quiz" = [
    "README.md",
    "templates/**/*.html",
    "static/*",
    "quizzes/*.md",
]

"snake_flask.tables" = [
    "README.md",
    "templates/**/*.html",
    "static/*",
]

"snake_flask.utils" = [
    "README.md",
]

"snake_flask.example" = [
    "app/templates/**/*.html",
]

[project.scripts]
snake-flask = "snake_flask.cli:main"
